--- a/app/views/genes/show.html.erb
+++ b/app/views/genes/show.html.erb
@@ -1,45 +1,3 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @gene.symbol %></h1>
+<h2><%= @gene.name %></h2>
 
-<p>
-  <b>Taxonomy:</b>
-  <%= @gene.taxonomy_id %>
-</p>
-
-<p>
-  <b>Symbol:</b>
-  <%= @gene.symbol %>
-</p>
-
-<p>
-  <b>Name:</b>
-  <%= @gene.name %>
-</p>
-
-<p>
-  <b>Chromosome:</b>
-  <%= @gene.chromosome %>
-</p>
-
-<p>
-  <b>Map location:</b>
-  <%= @gene.map_location %>
-</p>
-
-<p>
-  <b>Articles count:</b>
-  <%= @gene.articles_count %>
-</p>
-
-<p>
-  <b>Start position:</b>
-  <%= @gene.start_position %>
-</p>
-
-<p>
-  <b>End position:</b>
-  <%= @gene.end_position %>
-</p>
-
-
-<%= link_to 'Edit', edit_gene_path(@gene) %> |
-<%= link_to 'Back', genes_path %>
